--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -30,10 +30,17 @@ library(dplyr)
 ```{r, read in metadata & regions of interest}
 #reading in metdata
 meta <- read.csv("../csaw_samples_files/cac_csaw_FINAL.csv")
+metaQC <- read.csv("../csaw_samples_files/cac_csaw_QC_FINAL.csv")
 
 #fix path (if necessary, should only be if you're in wrong directory)
 meta <- meta %>%
   mutate(bamReads = paste0("../", bamReads))
+
+metaQC <- metaQC %>%
+  mutate(bamReads = paste0("../", bamReads))
+
+#meta <- meta %>%
+#mutate(Peaks = paste0("../", Peaks))
 
 #Build group factor from csaw metadata
 grouping <- factor(paste(meta$Strain, meta$Antibody, sep = "."))
@@ -363,128 +370,376 @@ count_results <- csaw_count_and_fit(
 ```
 ###########################################################################################
 
-```{r, csaw QC function}
-#This function can be used to run all relevant QC checks on the ChIP data you counted in the first function. you should choose "region" or "window based on what mode you used for the first function
+```{r, QC function}
+# ============================================================
+# SCRIPT 1: DiffBind-only (ALL samples)
+#   - Uses your working logic:
+#       * Attempt 1: declared/guessed PeakCaller
+#       * Attempt 2: force 'bed'
+#       * Attempt 3: cleaned peaks + 'bed'
+#   - PCA: by modification (no labels)
+#   - Correlation heatmap: colored, no dendrogram, no labels
+#   - No ChIPQC here.
+# ============================================================
+suppressPackageStartupMessages({
+  library(DiffBind)
+  library(dplyr)
+  library(readr)
+  library(stringr)
+  library(tools)
+})
 
-# ---------- QC function (run after your counting/fitting) ----------
-qc_csaw <- function(
-  metadata_df,
-  out_obj = NULL,                    # optional list returned by csaw_count_and_fit(); if NULL we autodiscover from .GlobalEnv
-  mode = c("window","region"),       # whichever you actually ran
-  out_dir = "qc_csaw",
-  which_sets = c("both","genomewide","regions")  # what to QC
-) {
-  mode <- match.arg(mode)
-  which_sets <- match.arg(which_sets)
+.safe_dir <- function(d){
+  if (!dir.exists(d)) dir.create(d, recursive = TRUE)
+  normalizePath(d, mustWork = FALSE)
+}
 
-  stopifnot(is.data.frame(metadata_df))
-  if (!all(c("Strain","Antibody","bamReads") %in% names(metadata_df))) {
-    stop("metadata_df must have Strain, Antibody, bamReads")
+.is_input_row <- function(df){
+  fields <- paste(
+    if ("Antibody" %in% names(df)) df$Antibody else "",
+    if ("Factor"   %in% names(df)) df$Factor   else "",
+    if ("SampleID" %in% names(df)) df$SampleID else "",
+    sep = " "
+  )
+  grepl("(^|[^A-Za-z])input([^A-Za-z]|$)", tolower(fields), perl = TRUE)
+}
+
+.make_numeric_replicate <- function(df){
+  rep_num <- NA_integer_
+  if ("Replicate" %in% names(df)) {
+    rep_num <- suppressWarnings(as.integer(gsub("\\D", "", as.character(df$Replicate))))
+  }
+  if (all(is.na(rep_num))) {
+    grp <- if ("Strain" %in% names(df)) interaction(df$Antibody, df$Strain, drop=TRUE) else df$Antibody
+    rep_num <- ave(seq_len(nrow(df)), grp, FUN = function(x) seq_along(x))
+  }
+  as.integer(rep_num)
+}
+
+.guess_peakcaller <- function(p){
+  ext <- tolower(file_ext(p))
+  if (ext == "narrowpeak") return("narrow")
+  if (ext == "broadpeak")  return("broad")
+  "bed"
+}
+
+.clean_peak_file <- function(src, out_tmp_dir){
+  .safe_dir(out_tmp_dir)
+  dst <- file.path(out_tmp_dir, basename(src))
+  con_in  <- file(src, open="r")
+  con_out <- file(dst, open="w")
+  on.exit({ close(con_in); close(con_out) }, add=TRUE)
+  repeat {
+    ln <- readLines(con_in, n=10000, warn=FALSE)
+    if (length(ln) == 0) break
+    ln <- ln[!grepl("^\\s*(track|browser)\\b", ln, ignore.case=TRUE)]
+    keep <- vapply(strsplit(ln, "\t", fixed=TRUE), function(v) length(v) >= 3, logical(1))
+    if (any(keep)) writeLines(ln[keep], con_out)
+  }
+  dst
+}
+
+.make_db_sheet <- function(inc, force_peakcaller=NULL, cleaned_dir=NULL){
+  pc_vals <- if (!is.null(force_peakcaller)) {
+    rep(force_peakcaller, nrow(inc))
+  } else if ("PeakCaller" %in% names(inc)) {
+    as.character(inc$PeakCaller)
+  } else {
+    vapply(inc$Peaks, .guess_peakcaller, "")
   }
 
-  # --- deps ---
-  require(edgeR)
-  require(limma)     # <-- add this
-  require(ggplot2)
-
-  # --- helpers ---
-  safe_dir <- function(d){ 
-    if (!dir.exists(d)) dir.create(d, recursive = TRUE)
-    normalizePath(d, mustWork = FALSE) 
-  }
-  png_wrap  <- function(file, expr, w=1800, h=1200, res=200){
-    png(file, width=w, height=h, res=res)
-    on.exit(dev.off(), add=TRUE)
-    force(expr)
+  peak_paths <- if (is.null(cleaned_dir)) {
+    as.character(inc$Peaks)
+  } else {
+    vapply(as.character(inc$Peaks), .clean_peak_file, "", out_tmp_dir=cleaned_dir)
   }
 
-  # Discover objects from GlobalEnv if no list provided
-  discover_from_global <- function() {
-    nm <- ls(.GlobalEnv)
-    res <- list()
-    if (which_sets %in% c("both","genomewide")) {
-      if (all(c("dge_genomewide","disp_genomewide","fit_genomewide") %in% nm)) {
-        res$genomewide <- list(
-          dge  = get("dge_genomewide",  envir = .GlobalEnv),
-          disp = get("disp_genomewide", envir = .GlobalEnv),
-          fit  = get("fit_genomewide",  envir = .GlobalEnv)
-        )
+  inc %>%
+    mutate(
+      Factor     = if ("Factor" %in% names(.)) as.character(Factor) else as.character(Antibody),
+      Condition  = dplyr::case_when(
+        "Condition" %in% names(.) ~ as.character(Condition),
+        "Strain"    %in% names(.) ~ as.character(Strain),
+        TRUE ~ "All"
+      ),
+      Replicate  = .make_numeric_replicate(.),
+      PeakCaller = pc_vals,
+      Peaks      = peak_paths
+    ) %>%
+    transmute(
+      SampleID   = as.character(SampleID),
+      Factor     = as.character(Factor),
+      Condition  = as.character(Condition),
+      Replicate  = as.integer(Replicate),
+      bamReads   = as.character(bamReads),
+      Peaks      = as.character(Peaks),
+      PeakCaller = as.character(PeakCaller)
+    )
+}
+
+.run_diffbind_all <- function(inc, out_dir){
+  db_out <- .safe_dir(file.path(out_dir, "DiffBind_ONLY"))
+
+  # Attempt 1
+  db_sheet1 <- .make_db_sheet(inc, force_peakcaller=NULL, cleaned_dir=NULL)
+  message("[DiffBind] Attempt 1 — PeakCaller values: ", paste(unique(db_sheet1$PeakCaller), collapse=", "))
+  message("[DiffBind] Example rows:"); print(utils::head(db_sheet1, 1))
+  dbObj <- tryCatch(dba(sampleSheet = as.data.frame(db_sheet1)), error=function(e) e)
+  if (inherits(dbObj, "error")) {
+    message("  ⚠️  Attempt 1 failed: ", conditionMessage(dbObj))
+    # Attempt 2: force 'bed'
+    db_sheet2 <- .make_db_sheet(inc, force_peakcaller="bed", cleaned_dir=NULL)
+    message("[DiffBind] Attempt 2 — forcing PeakCaller='bed'"); print(utils::head(db_sheet2, 5))
+    dbObj <- tryCatch(dba(sampleSheet = as.data.frame(db_sheet2)), error=function(e) e)
+    if (inherits(dbObj, "error")) {
+      message("  ⚠️  Attempt 2 failed: ", conditionMessage(dbObj))
+      # Attempt 3: cleaned peaks + 'bed'
+      clean_dir <- .safe_dir(file.path(db_out, "cleaned_peaks"))
+      db_sheet3 <- .make_db_sheet(inc, force_peakcaller="bed", cleaned_dir=clean_dir)
+      message("[DiffBind] Attempt 3 — cleaned peaks + PeakCaller='bed'")
+      dbObj <- tryCatch(dba(sampleSheet = as.data.frame(db_sheet3)), error=function(e) e)
+      if (inherits(dbObj, "error")) {
+        stop("[DiffBind] dba() failed after 3 attempts.\n",
+             " • Attempt 1 PeakCaller(s): ", paste(unique(db_sheet1$PeakCaller), collapse=", "), "\n",
+             " • Attempt 2 forced 'bed'\n",
+             " • Attempt 3 cleaned peaks + 'bed'\n",
+             "Last error: ", conditionMessage(dbObj))
       }
+    } else {
+      message("  ✅ DiffBind succeeded (Attempt 2, PeakCaller='bed').")
     }
-    if (which_sets %in% c("both","regions")) {
-      region_names <- unique(gsub("^(dge|disp|fit)_", "", nm[grepl("^(dge|disp|fit)_", nm)]))
-      res$regions <- list()
-      for (rn in region_names) {
-        if (all(c(paste0("dge_",rn), paste0("disp_",rn), paste0("fit_",rn)) %in% nm)) {
-          res$regions[[rn]] <- list(
-            dge  = get(paste0("dge_", rn),  envir = .GlobalEnv),
-            disp = get(paste0("disp_", rn), envir = .GlobalEnv),
-            fit  = get(paste0("fit_", rn),  envir = .GlobalEnv)
-          )
-        }
-      }
-    }
-    res
+  } else {
+    message("  ✅ DiffBind succeeded (Attempt 1).")
   }
 
-  # get objects
-  results <- if (!is.null(out_obj)) out_obj else discover_from_global()
-  out_dir <- safe_dir(out_dir)
+  ## === Plots (as previously working) ===
+  pca_pdf <- file.path(db_out, "DiffBind_PCA_ALL_byMod_nolabels.pdf")
+  pdf(pca_pdf, width = 7, height = 6)
+  dba.plotPCA(dbObj, attributes = DBA_FACTOR, label = NULL, b3d = FALSE)
+  dev.off()
+  message("  ✅ PCA (by mod, no labels): ", pca_pdf)
 
-  qc_one <- function(dge, disp, fit, label) {
-    subdir <- safe_dir(file.path(out_dir, label))
+  corr_pdf <- file.path(db_out, "DiffBind_corr_ALL_nodendro_nolabels.pdf")
+  pdf(corr_pdf, width = 8.5, height = 7.5)
+  dba.plotHeatmap(
+    dbObj,
+    correlations = TRUE,
+    dendrogram   = "none",
+    cexRow       = 0.001,
+    cexCol       = 0.001
+  )
+  dev.off()
+  message("  ✅ Correlation heatmap (colored, no dendrogram / no labels): ", corr_pdf)
 
-    # Library size barplot
-    libfile <- file.path(subdir, "libsize_barplot.png")
-    png_wrap(libfile, {
-      barplot(dge$samples$lib.size/1e6, names = colnames(dge), las = 2,
-              ylab = "Library size (millions)", main = paste("Library sizes -", label))
-    })
+  invisible(dbObj)
+}
 
-    # MDS plot (force limma’s method for DGEList)
-    mdsfile <- file.path(subdir, "MDS_plot.png")
-    png_wrap(mdsfile, {
-      limma::plotMDS(dge, main = paste("MDS plot -", label))  # <-- changed
-      # if you *still* get grief from masking, this is a belt-and-suspenders option:
-      # limma::plotMDS(edgeR::cpm(dge, log=TRUE, prior.count=2), main = paste("MDS plot -", label))
-    })
+run_diffbind_only <- function(metadata, out_dir = "QC_DiffBindOnly") {
+  .safe_dir(out_dir)
 
-    # BCV plot
-    bcvfile <- file.path(subdir, "BCV_plot.png")
-    png_wrap(bcvfile, {
-      edgeR::plotBCV(disp, main = paste("BCV plot -", label))
-    })
-
-    # Mean–variance plot (custom, log2 CPM)
-    mvfile <- file.path(subdir, "meanvar_plot.png")
-    png_wrap(mvfile, {
-      cpm_mat <- edgeR::cpm(dge, log = TRUE, prior.count = 2)
-      means <- rowMeans(cpm_mat)
-      vars  <- apply(cpm_mat, 1, var)
-      plot(means, vars, pch = 16, cex = 0.4,
-           xlab = "Mean log2 CPM", ylab = "Variance (log2 CPM)",
-           main = paste("Mean–Variance (log2 CPM) -", label))
-      lines(lowess(means, vars), lwd = 2, col = "red")
-    })
-
-    # QL dispersion plot
-    qldfile <- file.path(subdir, "QL_dispersion_plot.png")
-    png_wrap(qldfile, {
-      edgeR::plotQLDisp(fit, main = paste("QL dispersion -", label))
-    })
+  if (is.character(metadata) && length(metadata) == 1 && file.exists(metadata)) {
+    meta <- read.csv(metadata, stringsAsFactors = FALSE)
+  } else if (is.data.frame(metadata)) {
+    meta <- metadata
+  } else {
+    stop("`metadata` must be a data.frame or a path to an existing CSV.")
   }
 
-  # Run QC
-  if (which_sets %in% c("both","genomewide") && !is.null(results$genomewide)) {
-    with(results$genomewide, qc_one(dge, disp, fit, "genomewide"))
+  req <- c("SampleID", "Antibody", "bamReads", "Peaks")
+  miss <- setdiff(req, names(meta))
+  if (length(miss)) stop("Metadata missing column(s): ", paste(miss, collapse = ", "))
+
+  meta <- meta %>%
+    mutate(
+      SampleID  = as.character(SampleID),
+      Antibody  = as.character(Antibody),
+      bamReads  = as.character(bamReads),
+      Peaks     = as.character(Peaks),
+      is_input  = .is_input_row(.),
+      bam_ok    = !is.na(bamReads) & bamReads != "" & file.exists(bamReads),
+      peak_ok   = !is.na(Peaks)    & Peaks    != "" & file.exists(Peaks)
+    )
+
+  inc <- meta %>% filter(!is_input & bam_ok & peak_ok)
+
+  message("Total rows: ", nrow(meta))
+  message("Included (non-input, files present): ", nrow(inc))
+  if (nrow(inc) == 0) stop("No valid rows after filtering.")
+
+  message("\n[DiffBind] Running with fallbacks …")
+  .run_diffbind_all(inc, out_dir = out_dir)
+
+  message("\nDone (DiffBind only). Outputs in: ", normalizePath(out_dir))
+}
+
+
+# ============================================================
+# SCRIPT 2: ChIPQC-only (per modification)
+#   - Independent from DiffBind
+#   - Forces PeakCaller="bed" to avoid numeric score requirement
+#   - Drops samples with 0 reads-in-peaks, then makes one full report per Antibody
+#   - No tryCatch wrappers
+# ============================================================
+suppressPackageStartupMessages({
+  library(ChIPQC)
+  library(BiocParallel)
+  library(dplyr)
+  library(tools)
+  # for reads-in-peaks screening:
+  library(rtracklayer)
+  library(GenomicRanges)
+  library(GenomicAlignments)
+  library(Rsamtools)
+})
+
+.safe_dir_qc <- function(d){
+  if (!dir.exists(d)) dir.create(d, recursive = TRUE)
+  normalizePath(d, mustWork = FALSE)
+}
+
+.is_input_row_qc <- function(df){
+  fields <- paste(
+    if ("Antibody" %in% names(df)) df$Antibody else "",
+    if ("Factor"   %in% names(df)) df$Factor   else "",
+    if ("SampleID" %in% names(df)) df$SampleID else "",
+    sep = " "
+  )
+  grepl("(^|[^A-Za-z])input([^A-Za-z]|$)", tolower(fields), perl = TRUE)
+}
+
+.make_numeric_replicate_qc <- function(df){
+  rep_num <- NA_integer_
+  if ("Replicate" %in% names(df)) {
+    rep_num <- suppressWarnings(as.integer(gsub("\\D", "", as.character(df$Replicate))))
   }
-  if (which_sets %in% c("both","regions") && !is.null(results$regions)) {
-    for (nm in names(results$regions)) {
-      with(results$regions[[nm]], qc_one(dge, disp, fit, nm))
-    }
+  if (all(is.na(rep_num))) {
+    grp <- if ("Strain" %in% names(df)) interaction(df$Antibody, df$Strain, drop=TRUE) else df$Antibody
+    rep_num <- ave(seq_len(nrow(df)), grp, FUN = function(x) seq_along(x))
+  }
+  as.integer(rep_num)
+}
+
+# --- minimal helper to count reads overlapping peaks (to drop zero-read samples) ---
+.reads_in_peaks_count_qc <- function(bam, peaks, mapq = 0, max_peaks = 5000){
+  if (!file.exists(bam) || !file.exists(peaks)) return(0L)
+
+  # Import peaks (accept narrowPeak/broadPeak/bed/gff/gtf)
+  ext <- tolower(tools::file_ext(peaks))
+  fmt <- if (ext %in% c("narrowpeak","broadpeak","bed","gff","gff3","gtf")) ext else "bed"
+  gr  <- rtracklayer::import(peaks, format = fmt)
+  if (length(gr) == 0L) return(0L)
+  if (length(gr) > max_peaks) gr <- gr[seq_len(max_peaks)]
+
+  # Detect pairedness safely
+  paired <- FALSE
+  tp <- try(Rsamtools::testPairedEndBam(bam), silent = TRUE)
+  if (!inherits(tp, "try-error") && is.logical(tp) && !is.na(tp)) {
+    paired <- isTRUE(tp)
   }
 
-  message("QC complete. Plots saved to: ", out_dir)
+  bf  <- Rsamtools::BamFile(bam, yieldSize = 1e6)
+  prm <- Rsamtools::ScanBamParam(
+    mapqFilter = mapq,
+    flag = Rsamtools::scanBamFlag(isSecondaryAlignment = FALSE)
+  )
+
+  # singleEnd must be TRUE (SE) or FALSE (PE); fragments=TRUE for PE
+  se <- GenomicAlignments::summarizeOverlaps(
+    features      = gr,
+    reads         = bf,
+    singleEnd     = !paired,
+    fragments     = paired,
+    mode          = "Union",
+    ignore.strand = TRUE,
+    param         = prm
+  )
+  as.integer(sum(SummarizedExperiment::assay(se)))
+}
+
+
+run_chipqc_only <- function(metadata, out_dir = "QC_ChIPQCOnly", mapq = 0) {
+  .safe_dir_qc(out_dir)
+  register(BiocParallel::SerialParam())
+
+  # accept data.frame or CSV path
+  if (is.character(metadata) && length(metadata) == 1 && file.exists(metadata)) {
+    meta <- read.csv(metadata, stringsAsFactors = FALSE)
+  } else if (is.data.frame(metadata)) {
+    meta <- metadata
+  } else {
+    stop("`metadata` must be a data.frame or a path to an existing CSV.")
+  }
+
+  req <- c("SampleID", "Antibody", "bamReads", "Peaks")
+  miss <- setdiff(req, names(meta))
+  if (length(miss)) stop("Metadata missing column(s): ", paste(miss, collapse = ", "))
+
+  meta <- meta %>%
+    mutate(
+      SampleID  = as.character(SampleID),
+      Antibody  = as.character(Antibody),
+      bamReads  = trimws(as.character(bamReads)),
+      Peaks     = trimws(as.character(Peaks)),
+      is_input  = .is_input_row_qc(.),
+      bam_ok    = !is.na(bamReads) & bamReads != "" & file.exists(bamReads),
+      peak_ok   = !is.na(Peaks)    & Peaks    != "" & file.exists(Peaks)
+    )
+
+  inc0 <- meta %>% filter(!is_input & bam_ok & peak_ok)
+
+  message("Total rows: ", nrow(meta))
+  message("Included for ChIPQC (pre-screen): ", nrow(inc0))
+  if (nrow(inc0) == 0) stop("No valid rows for ChIPQC after filtering.")
+
+  # --- DROP zero reads-in-peaks samples ---
+  message("Screening reads-in-peaks (dropping zeros)…")
+  rip <- mapply(.reads_in_peaks_count_qc,
+                bam   = inc0$bamReads,
+                peaks = inc0$Peaks,
+                MoreArgs = list(mapq = mapq, max_peaks = 5000))
+  inc0$reads_in_peaks <- rip
+
+  drop_zero <- inc0 %>% filter(reads_in_peaks <= 0L)
+  inc       <- inc0  %>% filter(reads_in_peaks > 0L)
+
+  if (nrow(drop_zero) > 0) {
+    message("Dropped (0 reads in peaks): ", paste(drop_zero$SampleID, collapse = ", "))
+    write.csv(drop_zero, file.path(out_dir, "dropped_zero_reads_in_peaks.csv"), row.names = FALSE)
+  }
+  message("Remaining for ChIPQC: ", nrow(inc))
+  if (nrow(inc) == 0) stop("All samples had 0 reads overlapping peaks; nothing to report.")
+
+  # --- one full report per modification (Antibody) ---
+  mods <- unique(inc$Antibody)
+  message("\n[ChIPQC] Generating reports per modification…")
+  for (mod in mods) {
+    mod_df  <- inc %>% filter(Antibody == mod)
+    if (nrow(mod_df) == 0) next
+    mod_out <- .safe_dir_qc(file.path(out_dir, paste0("ChIPQC_", mod)))
+    message("  [", mod, "] Samples: ", paste(mod_df$SampleID, collapse = ", "))
+
+    # Minimal sheet for ChIPQC
+    chip_sheet <- mod_df %>%
+      mutate(
+        Tissue     = if ("Tissue" %in% names(.)) as.character(Tissue) else "All",
+        Condition  = if ("Condition" %in% names(.)) as.character(Condition) else
+                       if ("Strain" %in% names(.)) as.character(Strain) else "All",
+        Factor     = if ("Factor" %in% names(.)) as.character(Factor) else Antibody,
+        Replicate  = .make_numeric_replicate_qc(.),
+        PeakCaller = "bed"  # force BED to avoid numeric-score requirement
+      ) %>%
+      select(SampleID, Tissue, Factor, Condition, Replicate, bamReads, Peaks, PeakCaller)
+
+    chipObj <- ChIPQC(as.data.frame(chip_sheet), mapq = mapq)
+    ChIPQCreport(
+      chipObj,
+      reportName   = paste0("ChIPQC_report_", mod),
+      reportFolder = mod_out
+    )
+    message("    ✅ Report: ", mod_out)
+  }
+
+  message("\nDone (ChIPQC only). Outputs in: ", normalizePath(out_dir))
 }
 
 ```
@@ -492,14 +747,9 @@ qc_csaw <- function(
 ###########################################################################################
 ```{r, Run QC function}
 
-#This is where you change the paramters and run the function
-qc_csaw(
-  metadata_df = meta,
-  out_obj = NULL, # autodiscover from global env, Use "count_results" if variables not in global
-  mode = "region", # "region" or "window" depending on choice in count fxn.
-  out_dir = "QCTEST", #output directory, name whatever you want
-  which_sets = "regions" # "genomewide", "regions", or "both"
-)
+#This is where you change the parameters and run the function
+run_diffbind_only(metaQC, out_dir = "QC_DiffBindOnly")
+run_chipqc_only(metaQC, out_dir = "QC_ChIPQCOnly")
 
 ```
 ###########################################################################################
@@ -3198,12 +3448,16 @@ H3K36me3_no_ash1_nonK27 = subset(H3K36me3_no_ash1, ! H3K36me3_no_ash1$gene_id %i
 #Not ash-1 methylated
 H3K36me3_set2_meth <- subset(K36_enriched_genes, ! K36_enriched_genes$gene_id %in% H3K36me3_no_ash1$gene_id & ! K36_enriched_genes$gene_id %in% regions$K27genes$gene_id)
 
+###Make beds
+H3K36me3_no_ash1_nonK27_bed = subset(regions$K27genes, regions$K27genes$V10 %in% H3K36me3_no_ash1_nonK27$gene_id)
+
+H3K36me3_set2_meth_bed <- subset(regions$K27genes, regions$K27genes$V10 %in% H3K36me3_set2_meth$gene_id)
+
 #write files
-write.table(H3K36me3_no_ash1_nonK27, file = "ash1_meth_nonK27_V2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(H3K36me3_no_ash1_nonK27_bed, file = "ash1_meth_nonK27_V2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-write.table(H3K36me3_no_ash1_TEST, file = "ash1_meth_nonK27_TEST.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
-write.table(H3K36me3_set2_meth, file = "set2_meth_only_V2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
+write.table(H3K36me3_set2_meth_bed, file = "set2_meth_only_V2.bed", sep = "\t", quote = FALSE, row.names = FALSE, col.names = FALSE)
 
 
 
